# la-liga-forwards-analysis

./: .gitignore  .impeccable.md  CONTRIBUTING.md  README.md  README.md.txt  analysis.py  analysis.py.txt  app.py  bar_chart.py.txt  debug_csv.py  generate_static.py  players_data.py  players_data.py.txt  players_scores.py.txt  pyproject.toml  radar_diagram.py.txt  requirements-scraping.txt  requirements.txt  run_app.bat  run_app.sh  test_csv_handler.py  test_semicolon.csv
.github/workflow/: python-app.yml
.github/workflows/: deploy-gh-pages-backup.yml  deploy-github-pages.yml  deploy-pages.yml  deploy.yml  streamlit-ci.yml
.streamlit/: config.toml
data/: verified_players.csv
data/processed/: la_liga_all_players.json  players_summary.csv
data/raw/wikipedia/: ballon_dor.json  champions_league.json  la_liga_best_player.json  la_liga_titles.json  pichichi.json
docs/: index.html
outputs/: player_scores.csv
scripts/: 04_bar_chart.py  analysis.py  bar_chart.py  config.py  csv_handler.py  import_fbref_csv.py  main.py  merge_data.py  players_data.py  players_scores.py  radar_diagram.py  scrape_fbref.py  scrape_wikipedia.py
src/: __init__.py
src/core/: __init__.py  analysis.py  players_data.py
src/handlers/: __init__.py  builtin_data_handler.py  csv_handler.py
src/visualizations/: __init__.py  bar_chart.py  radar_diagram.py
tests/: __init__.py  test_analysis.py  test_builtin_data_handler.py  test_csv_handler.py  test_players_data.py
